--- a/FuelApi/appsettings.json
+++ b/FuelApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost,Port=3000; Database=transportdb;user=root;password="
+    //"DefaultConnection": "Server=192.168.1.105,Port=3000; Database=transportdb;user=root;password="
     "DefaultConnection": "Server=156.67.210.236,Port=888;Database=transportdb;user=TransportDB;password=TransportDB"
   }
 }
